--- a/assets/styles/_animations.css
+++ b/assets/styles/_animations.css
@@ -1,11 +1,11 @@
 @keyframes pulse {
     0% {
-        filter: drop-shadow(0 0 3px hsl(274, 93%, 63%));
+        filter: drop-shadow(0 0 3px rgb(var(--v-theme-primary)));
     }
     50% {
-        filter: drop-shadow(0 0 6px hsl(274, 93%, 63%));
+        filter: drop-shadow(0 0 6px rgb(var(--v-theme-primary)));
     }
     100% {
-        filter: drop-shadow(0 0 3px hsl(274, 93%, 63%));
+        filter: drop-shadow(0 0 3px rgb(var(--v-theme-primary)));
     }
 }
